--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/TraceTheNet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ganymed-ssh2-build210.jar=C:\\Users\\Thibault\\Downloads\\ganymed-ssh2-build210\\ganymed-ssh2-build210.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ganymed-ssh2-build210.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
