SSH correction null pointer exception
SSH correction null pointer exception

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/TraceTheNet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.ganymed-ssh2-build210.jar=C:\\Users\\Thibault\\Downloads\\ganymed-ssh2-build210\\ganymed-ssh2-build210.jar
+file.reference.ganymed-ssh2-build210.jar=ganymed-ssh2-build210.jar
 includes=**
 jar.compress=false
 javac.classpath=\
