--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,51 +30,27 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.collections-generic-4.01.jar=collections-generic-4.01.jar
-file.reference.colt-1.2.0.jar=colt-1.2.0.jar
-file.reference.concurrent-1.3.4.jar=concurrent-1.3.4.jar
 file.reference.ganymed-ssh2-build210.jar=ganymed-ssh2-build210.jar
-file.reference.j3d-core-1.3.1.jar=j3d-core-1.3.1.jar
-file.reference.jung-3d-2.0.1.jar=jung-3d-2.0.1.jar
-file.reference.jung-3d-demos-2.0.1.jar=jung-3d-demos-2.0.1.jar
 file.reference.jung-algorithms-2.0.1.jar=jung-algorithms-2.0.1.jar
 file.reference.jung-api-2.0.1.jar=jung-api-2.0.1.jar
 file.reference.jung-graph-impl-2.0.1.jar=jung-graph-impl-2.0.1.jar
-file.reference.jung-io-2.0.1.jar=jung-io-2.0.1.jar
-file.reference.jung-jai-2.0.1.jar=jung-jai-2.0.1.jar
-file.reference.jung-jai-samples-2.0.1.jar=jung-jai-samples-2.0.1.jar
-file.reference.jung-samples-2.0.1.jar=jung-samples-2.0.1.jar
 file.reference.jung-visualization-2.0.1.jar=jung-visualization-2.0.1.jar
-file.reference.stax-api-1.0.1.jar=stax-api-1.0.1.jar
-file.reference.vecmath-1.3.1.jar=vecmath-1.3.1.jar
-file.reference.wstx-asl-3.2.6.jar=wstx-asl-3.2.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ganymed-ssh2-build210.jar}:\
-    ${file.reference.colt-1.2.0.jar}:\
-    ${file.reference.jung-jai-samples-2.0.1.jar}:\
-    ${file.reference.jung-samples-2.0.1.jar}:\
     ${file.reference.jung-visualization-2.0.1.jar}:\
-    ${file.reference.stax-api-1.0.1.jar}:\
-    ${file.reference.vecmath-1.3.1.jar}:\
-    ${file.reference.wstx-asl-3.2.6.jar}:\
-    ${file.reference.concurrent-1.3.4.jar}:\
     ${file.reference.jung-api-2.0.1.jar}:\
-    ${file.reference.jung-graph-impl-2.0.1.jar}:\
-    ${file.reference.jung-io-2.0.1.jar}:\
-    ${file.reference.jung-jai-2.0.1.jar}:\
-    ${file.reference.j3d-core-1.3.1.jar}:\
-    ${file.reference.jung-3d-2.0.1.jar}:\
-    ${file.reference.jung-3d-demos-2.0.1.jar}:\
     ${file.reference.jung-algorithms-2.0.1.jar}:\
-    ${file.reference.collections-generic-4.01.jar}
+    ${file.reference.collections-generic-4.01.jar}:\
+    ${file.reference.jung-graph-impl-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
